CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)

PROJECT(pathfinder)

OPTION(BUILD_EXAMPLES "Build example programs." ON)

ADD_LIBRARY(pathfinder INTERFACE)
TARGET_INCLUDE_DIRECTORIES(pathfinder INTERFACE ${CMAKE_SOURCE_DIR}/include)

IF(BUILD_EXAMPLES)
	ADD_SUBDIRECTORY(examples)
ENDIF(BUILD_EXAMPLES)
